Fixed a little broken layout issues on "getting started" page.

--- a/src/documents_en/css/_content.scss
+++ b/src/documents_en/css/_content.scss
@@ -171,7 +171,7 @@ section#content-container {
       color: green;
     }
 
-    pre code {
+    pre, pre code {
       font-size: 16px;
     }
 
